--- a/index.html
+++ b/index.html
@@ -9,11 +9,70 @@
 </head>
 
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="header-container">
+            <h2 class="logo">Pomeranian Craze</h2>
+            <ul class="links">
+                <li class="link"><a href="">FAQ</a></li>
+                <li class="link"><a href="">Join</a></li>
+                <li class="link"><a href="">Sign In</a></li>
+            </ul>
+    </div>
+    </div>    
 
-    <div class="body"></div>
 
-    <div class="footer"></div>
+    <div class="hero">
+        <div class="hero-container">
+            <div class="hero-left">
+                <h1 class="title">Pomeranians are awesome!</h1>
+                <p class="under-title">Welcome to your one stop for all things Pomeranian! Sign up today and discover everything to know about these lovely creatures.</p>
+                <button class="sign-up">Sign Up</button>
+            </div>
+            <img class="image1" src="images/1.jpg" alt="a lovely Pomeranian">
+        </div>
+    </div>
+
+    <div class="body">
+        <h3 class="body-title">Resistance Is Futile...</h3>
+        <div class="body-images">
+            <figure>
+                <img class="figure" src="./images/2.jpg">
+                <figcaption>Look at how cute they are.</figcaption>
+            </figure>
+            <figure>
+                <img class="figure" src="./images/3.jpg">
+                <figcaption>Aren't they lovely?</figcaption>
+            </figure>
+            <figure>
+                <img class="figure" src="./images/4.jpg">
+                <figcaption>World wouldn't be the same without them.</figcaption>
+            </figure>
+            <figure>
+                <img class="figure" src="./images/5.jpg">
+                <figcaption>So join the fun today!</figcaption>
+            </figure>    
+        </div>
+    </div>
+    
+    <div class="quote">
+        <p class="quote-text">If you want to make a Pomeranian friend, know this: Pomeranians are like potato chips. One is never enough.</p>
+        <p class="quote-owner">Anonymous</p>
+    </div>
+
+    <div class="cta">
+        <div class="cta-message">
+            <h3 class="cta-header">It is time to join us!</h3>
+            <p class="cta-text">Sign up today to be a part of the best community in the world!</p>
+        </div>
+        <div class="cta-button">
+            <button class="sign-up">Sign up</button>  
+        </div>
+    </div>
+
+
+    <div class="footer">
+        <p class="footer-text">Copyright © The Odin Project 2022</p>
+    </div>
 
 </body>
 </html>
