Update CSS and images

--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <title>Pomeranian Craze!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="top-part">
     <div class="header">
-        <div class="header-container">
+        <!-- <div class="header-container"> -->
             <h2 class="logo">Pomeranian Craze</h2>
             <ul class="links">
                 <li class="link"><a href="">FAQ</a></li>
                 <li class="link"><a href="">Join</a></li>
                 <li class="link"><a href="">Sign In</a></li>
             </ul>
-        </div>
+        <!-- </div> -->
     </div>
     <div class="hero">
-        <div class="hero-container">
-            <div class="hero-left">
+        <!-- <div class="hero-container"> -->
+            <div class="hero-text">
                 <h1 class="title">Pomeranians are awesome!</h1>
                 <p class="under-title">Welcome to your one stop for all things Pomeranian! Sign up today and discover everything to know about these lovely creatures.</p>
                 <button class="sign-up">Sign Up</button>
             </div>
-            <img class="image1" src="images/1.jpg" alt="a lovely Pomeranian">
-        </div>
+            <div class="hero-image">
+                <img class="image1" src="images/1.jpg" alt="a lovely Pomeranian">
+            </div>
+        </div>            
+        <!-- </div> -->
     </div>
     <div class="body">
         <h3 class="body-title">Resistance Is Futile...</h3>
